# guit

./: Cargo.toml  README.md  REQUIREMENTS.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx  app.rs  global.css  main.rs  main.tsx  styles.ts
src-tauri/: tauri.conf.json
src/components/: Header.tsx  ListFilesToAdd.tsx  header.rs  list_item.rs  mod.rs
src/components/molecules/: File.tsx
src/components/organismins/: Folder.tsx
src/data/: filesMock.ts
src/interfaces/: IFile.ts  IFolder.ts
src/mappers/: fileIconMap.ts
src/pages/: branches_page.rs  commit_page.rs  flow_page.rs  history_page.rs  history_pages.rs  mod.rs
