[package]
name = "guit"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1.0"
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui" }
winit = "0.30.5"
git2 = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" 
log = "0.4"
env_logger = "0.11.5"